Remove usages of emptySet etc. which have been superseded